--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
             <img src="../img/megaphone.png" alt="">
         </section>
         <section class="company-section">
-            <img class="company-section__item" src="../img/company-logos/amazon.svg"></img>
-            <img class="company-section__item" src="../img/company-logos/dribble.svg"></img>
-            <img class="company-section__item" src="../img/company-logos/hubspot.svg"></img>
-            <img class="company-section__item" src="../img/company-logos/notion.svg"></img>
-            <img class="company-section__item" src="../img/company-logos/netflix.svg"></img>
-            <img class="company-section__item" src="../img/company-logos/zoom.svg"></img>
+            <img class="company-section__item" src="img/company-logos/amazon.svg"></img>
+            <img class="company-section__item" src="img/company-logos/dribble.svg"></img>
+            <img class="company-section__item" src="img/company-logos/hubspot.svg"></img>
+            <img class="company-section__item" src="img/company-logos/notion.svg"></img>
+            <img class="company-section__item" src="img/company-logos/netflix.svg"></img>
+            <img class="company-section__item" src="img/company-logos/zoom.svg"></img>
         </section>
         <section class="title-section">
             <h2>Services</h2>
